# moltark

./: .bazelrc  .coderabbit.yaml  .gitignore  AGENTS.md  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  composer.json  go.mod  go.sum  renovate.json
.claude/: settings.json
.github/workflows/: ci.yml  pr.yml
cmd/moltark/: BUILD.bazel  main.go
docs/: README.md  future-paths.md  testing.md
docs/concepts/: 01-core-concepts.md  02-modules-and-providers.md  03-execution-model.md
docs/research/: README.md  bazel-gazelle-research.md  go-project-scaffolding-research.md  rust-project-bootstrapping-research.md
internal/cliapp/: BUILD.bazel  app.go
internal/command/: BUILD.bazel  apply.go  doctor.go  init.go  meta.go  plan.go  show.go  version.go
internal/engine/: BUILD.bazel  pipeline.go  pipeline_test.go  plan.go  plan_test.go  resolve.go  resolve_test.go  service.go  service_test.go  state.go  state_test.go
internal/filefmt/: BUILD.bazel  gitattributes.go  gitattributes_test.go  json.go  json_test.go  paths.go  paths_test.go  toml.go  toml_test.go  yaml.go  yaml_test.go
internal/model/: BUILD.bazel  constants.go  types.go
internal/module/: BUILD.bazel  config.go  config_test.go  convert.go  core.go  core_test.go  factref.go  facts_test.go  pyproject.go  python.go  registry.go  uv.go
internal/moltark/: BUILD.bazel  config.go  config_test.go  constants.go  fact_ref_value.go  facts_test.go  gitattributes.go  gitattributes_test.go  jsonfile.go  jsonfile_test.go  module_core.go  module_core_test.go  module_python.go  module_uv.go  modules.go  pipeline.go  pipeline_test.go  plan.go  plan_test.go  pyproject.go  pyproject_test.go  resolve.go  resolve_test.go  service.go  service_test.go  starlark_convert.go  state.go  state_test.go  structured_paths.go  structured_paths_test.go  tomlfile.go  tomlfile_test.go  types.go  yamlfile.go  yamlfile_test.go
internal/testrepo/: BUILD.bazel  testrepo.go
internal/testutil/: BUILD.bazel  testutil.go  testutil_test.go
src/: Moltark.php
tests/features/: BUILD.bazel  pipeline_contract.feature  pipeline_contract_test.go  uv_dependencies.feature  uv_dependencies_test.go
tests/fixtures/: BUILD.bazel
tests/fixtures/bare_python_repo_with_uv_deps/: molt.star  pyproject.toml
tests/fixtures/conflicting_owned_fields/: Moltarkfile  molt.star
tests/fixtures/conflicting_owned_fields/.moltark/: state.json
tests/fixtures/core_structured_file_primitives/: Moltarkfile  molt.star
tests/fixtures/core_tasks_with_triggers/: Moltarkfile  molt.star
tests/fixtures/drifted_owned_fields/: molt.star  pyproject.toml
tests/fixtures/go_lint_vscode_component/: Moltarkfile  molt.star
tests/fixtures/opaque_root_with_python_child/: Moltarkfile  molt.star
tests/fixtures/upgraded_template_v1_to_v2/: .gitattributes  Moltarkfile  molt.star  pyproject.toml
tests/fixtures/upgraded_template_v1_to_v2/.moltark/: state.json
tests/fixtures/uv_workspace_with_nested_root/: Moltarkfile  molt.star
tests/integration/: BUILD.bazel  integration_test.go  main_test.go
tests/integration/__snapshots__/: integration_test.snap
tools/bazel/: BUILD.bazel  gherkin_defs.bzl
