module(name = "moltark")

bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.48.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# Keep this list tidy with `bazel mod tidy`.
use_repo(
    go_deps,
    "com_github_cucumber_godog",
    "com_github_gkampitakis_go_snaps",
    "com_github_goccy_go_yaml",
    "com_github_mitchellh_cli",
    "com_github_pelletier_go_toml_v2",
    "net_starlark_go",
)
