load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "moltark_lib",
    srcs = ["main.go"],
    importpath = "github.com/ophidiarium/moltark/cmd/moltark",
    visibility = ["//visibility:private"],
    deps = ["//internal/cliapp"],
)

go_binary(
    name = "moltark",
    embed = [":moltark_lib"],
    visibility = ["//visibility:public"],
)
