load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cliapp",
    srcs = ["app.go"],
    importpath = "github.com/ophidiarium/moltark/internal/cliapp",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/command",
        "@com_github_mitchellh_cli//:cli",
    ],
)
