load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "module",
    srcs = [
        "config.go",
        "convert.go",
        "core.go",
        "factref.go",
        "pyproject.go",
        "python.go",
        "registry.go",
        "uv.go",
    ],
    importpath = "github.com/ophidiarium/moltark/internal/module",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/filefmt",
        "//internal/model",
        "@net_starlark_go//starlark",
        "@net_starlark_go//starlarkstruct",
        "@net_starlark_go//syntax",
    ],
)

go_test(
    name = "module_test",
    srcs = [
        "config_test.go",
        "core_test.go",
    ],
    embed = [":module"],
    deps = [
        "//internal/model",
        "@net_starlark_go//starlark",
    ],
)
